# licenta

./: .gitignore  ARHITECTURA.txt  Documentatie_Licenta_ResoLab.docx  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
.docgen/: build.py  build_final.py  content.py  diagrams.py  helpers.py  part1.py  part2.py  part3.py
dsp/: Cargo.toml
dsp/pkg/: package.json  soundlab_dsp.d.ts  soundlab_dsp.js  soundlab_dsp_bg.wasm  soundlab_dsp_bg.wasm.d.ts
dsp/src/: engine.rs  lib.rs
dsp/src/effects/: chorus.rs  compressor.rs  de_esser.rs  delay.rs  eq.rs  expander.rs  flanger.rs  gain.rs  gate.rs  limiter.rs  mod.rs  noise_reduction.rs  phaser.rs  pitch_shift.rs  reverb.rs  saturation.rs  transient_shaper.rs
dsp/src/synth/: adsr.rs  filter.rs  mod.rs  oscillator.rs
dsp/src/utils/: delay_line.rs  envelope.rs  filters.rs  math.rs  mod.rs
public/worklets/: dsp-processor.js
scripts/: generate-samples.mjs
src/: App.tsx  index.css  main.tsx
src/audio/: analysis-bridge.ts  analyzerNode.ts  chop.ts  db.ts  engine.ts  export.ts  file-loader.ts  lufs.ts  metronome.ts  transport.ts  wav-encoder.ts  worklet-bridge.ts
src/education/: dynamicFeedback.ts  effectDescriptions.ts  recommendations.ts
src/hooks/: useKeyboardShortcuts.ts  useMidi.ts  useRecording.ts
src/presets/: factoryPresets.ts
src/store/: analysisStore.ts  audioStore.ts  educationStore.ts  effectsStore.ts  presetStore.ts  signalSuggestionsStore.ts  synthStore.ts  uiStore.ts  undoSeq.ts
src/types/: effects.ts
src/utils/: biquad.ts
(+41 files in other folders)
